# python-course

./: .gitignore  Curso de Python - Tema 01.ipynb  Curso de Python - Tema 02.ipynb  Curso de Python - Tema 03.ipynb  Curso de Python - Tema 04.ipynb  Curso de Python - Tema 05.ipynb  Curso de Python - Tema 06.ipynb  Curso de Python - Tema 07.ipynb  Curso de Python - Tema 08.ipynb  Curso de Python - Tema 09.ipynb  Curso de Python - Tema 10.ipynb  Curso de Python - Tema 11.ipynb  Curso de Python - Tema 12.ipynb  Pipfile  README.md  pyproject.toml
exercises/: Ejercicios Extra.ipynb  Ejercicios y Soluciones.ipynb  Enunciado Ejercicios.ipynb
exercises/src/: game.py  play.py  rps.py
