[tool.poetry]
name = "python-course"
version = "1.0.0"
description = "A Python course."
authors = ["Marcos Gabarda <hey@marcosgabarda.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^8.10.0"
jupyter = "^1.0.0"
numpy = "^1.20.3"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
pandoc = "^1.0.2"
requests = "^2.25.1"
rise = "^5.7.1"
jupyter-contrib-nbextensions = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
